fix button style on iphone

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -73,7 +73,8 @@
       width: 25%;
       background: $electric-blue-light;
       color: $electric-blue;
-      border: #bdf1fc;
+      border: none;
+      padding: 0;
       font-size: 24px;
     }
   }
